PATCH Request Documented for FAQ Endpoint
