# Intermediate Work/Code/backend/application/api.py
@@ -314,32 +314,33 @@ class FAQApi(Resource):
                 tid = int(data['ticket_id'])
             except:
                 abort(400, message="ticket_id is required and should be integer")
+            
+            if not db.session.query(Ticket).filter(Ticket.ticket_id==tid).first():
+                    abort(400, message="ticket_id does not exist")
+            current_ticket=db.session.query(FAQ).filter(FAQ.ticket_id==tid).first()
+            if not current_ticket: 
+                abort(400, message="ticket_id is not in FAQ")
+
             try:
                 cat = data['category']
+                if db.session.query(Category).filter(Category.category==cat).first() is None:
+                    abort(400, message="category does not exist")
+                else:
+                    current_ticket.category = cat
             except:
-                abort(400, message="category is required and should be string")
+               pass
             try:
                 is_app = data['is_approved']
+                if not isinstance(is_app, bool):
+                    abort(400, message="is_approved must be boolean")
+                else:
+                    current_ticket.is_approved = is_app
             except:
-                abort(400, message="is_approved is required and should be boolean")
-
-            if not db.session.query(Ticket).filter(Ticket.ticket_id==tid).first():
-                abort(400, message="ticket_id does not exist")
-
-            if db.session.query(Category).filter(Category.category==cat).first() is None:
-                abort(400, message="category does not exist")
-
-            if not isinstance(is_app, bool):
-                abort(400, message="is_approved must be boolean")
-            
-            current_ticket=db.session.query(FAQ).filter(FAQ.ticket_id==tid).first()
-            if current_ticket:
-                current_ticket.category = cat
-                current_ticket.is_approved = is_app
-                db.session.commit()
-                return jsonify({'message': "FAQ item updated successfully"})
-            else:
-                abort(400, message="ticket_id is not in FAQ")
+               pass
+                 
+            db.session.commit()
+            return jsonify({'message': "FAQ item updated successfully"})
+                
         else:
             abort(403, message="Unauthorized")
     
